[package]
name = "dominion-client"
version = "0.1.0"
authors = ["circumspect <40770208+circumspect@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dominion = { git = "https://github.com/tireswing/dominion", branch = "main" }
dominion-server = { git = "https://github.com/tireswing/dominion-server", branch = "main" }

anyhow = "1.0"
futures = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.6", features = ["codec"] }
